# todo

./: .gitignore  Cargo.toml  README.md
src/: arguments.rs  main.rs  tasks.rs
src/commandimpl/: add.rs  clear.rs  delete.rs  edit.rs  export.rs  init.rs  kill.rs  list.rs  mod.rs  reset.rs  search.rs  sort.rs  stats.rs
src/utility/: conjucture.rs  finddir.rs  mod.rs
