[package]
name = "todo"
version = "0.1.0"
edition = "2024"
authors = ["Baba Botinder"]
description = "A CLI tool to manage the task for each project"
license = "MIT"

[dependencies]
clap = { version = "4.5.37", features = ["derive"]}
bincode = { version = "2.0.1" }
anyhow = "1.0.98"
colored = "3.0.0"
chrono = "0.4.40"