[package]
name = "todo"
version = "0.1.0"
edition = "2024"
authors = ["Navin Kumar Singh"]
description = "A CLI tool to manage the task for each project"
license = "MIT"

[dependencies]
clap = { version = "4.5.37", features = ["derive"]}
bincode = { version = "2.0.1" }
anyhow = "1.0.98"
colored = "3.0.0"
chrono = "0.4.40"
serde = { version = "1.0.219", features = ["derive"] }
csv = "1.3.1"
serde_json = "1.0.140"